--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "accepts",
+  "name": "@edge-js/accepts",
   "description": "Higher-level content negotiation",
   "version": "1.3.8",
   "contributors": [
@@ -7,9 +7,9 @@
     "Jonathan Ong <me@jongleberry.com> (http://jongleberry.com)"
   ],
   "license": "MIT",
-  "repository": "jshttp/accepts",
+  "repository": "edgejs/accepts",
   "dependencies": {
-    "mime-types": "~2.1.34",
+    "@edge-js/mime-types": "~2.1.34",
     "negotiator": "0.6.3"
   },
   "devDependencies": {
